# jfnmfjfjffjfjffhaaaaaaaaaaac

./: .gitignore  ARM64_BUILD.md  CHANGELOG.md  CHECKLIST.md  COMMIT_MESSAGE.txt  COMPARISON_TABLE.md  CURRENT_STATUS.md  ESP_ANALYSIS.md  ESP_ANALYSIS_AND_FIXES.md  ESP_FIX_SUMMARY.md  ESP_TRANSFER_SUMMARY.md  EXTERNAL_UPDATED.md  FIXES_APPLIED.md  GITHUB_SUMMARY.md  GIT_INSTRUCTIONS.md  INDEX.md  JNI_BUILD_GUIDE.md  JNI_EXACT_TRANSFER_COMPLETE.md  JNI_TO_EXTERNAL2_TRANSFER.md  MIGRATION_SUMMARY.md  QUICK_REFERENCE.md  RAGE_ANALYSIS.md  README.md  README_FIXES.md  SUMMARY_RU.md  VISUAL_COMPARISON.md  offset.txt  БЫСТРАЯ_СПРАВКА.md  БЫСТРЫЙ_СТАРТ.md  ВИЗУАЛЬНОЕ_СРАВНЕНИЕ.md  ГОТОВО.md  ДЛЯ_ВАС.md  ДЛЯ_ВАС_v2.md  ИСПРАВЛЕНИЕ_v2.md  ПЕРЕНОС_ЗАВЕРШЕН.md  ПРАВИЛЬНЫЕ_ОФФСЕТЫ.md  РАБОТА_ЗАВЕРШЕНА.md  ФАЙЛЫ_ДОКУМЕНТАЦИИ.md  ФИНАЛЬНАЯ_СВОДКА.md  ФИНАЛЬНАЯ_СВОДКА_ESP.md  (+1 more)
External 2/bycmd/: AIMBOT_OFFSETS_VERIFICATION.md  BUILD_INSTRUCTIONS.md  CHANGELOG.md  CMakeLists.txt  ESP_COMPARISON.md  ESP_WORKING_VS_CURRENT.md  ESP_WPM_FUNCTIONS.md  Makefile.test  RAGE_STATUS_FINAL.md  README.md  build.bat  build_arm64.bat  test_bug_exploration.cpp
External 2/bycmd/includes/: preview.hpp  stb_image.h  weapon_icons.hpp
External 2/bycmd/includes/clipper2/: clipper2.h
External 2/bycmd/includes/draw/Android_draw/: draw.cpp
External 2/bycmd/includes/draw/Android_touch/: Touch.cpp
External 2/bycmd/includes/fonts/: weapon.h
External 2/bycmd/includes/fonts/esp/: esp.h
External 2/bycmd/includes/fonts/menu/: pixeloperator.h
External 2/bycmd/includes/internal/Android_draw/: draw.h
External 2/bycmd/includes/internal/Android_touch/: Touch.hpp
External 2/bycmd/includes/internal/native_surface/: ANativeWindowCreator.h
External 2/bycmd/src/: main.cpp
External 2/bycmd/src/func/: aimbot.cpp  aimbot.hpp  bullet_tracer.cpp  bullet_tracer.hpp  compat.hpp  exploits.cpp  exploits.hpp  hitmarker.cpp  hitmarker.hpp  physics_sim.cpp  physics_sim.hpp  silhouette_overlay.cpp  silhouette_overlay.hpp  visuals.cpp  visuals.hpp
External 2/bycmd/src/game/: game.hpp  math.hpp  player.hpp
External 2/bycmd/src/other/: injector.cpp  injector.hpp  memory.hpp  process_mask.cpp  process_mask.hpp  vector3.h  weapon_icons.cpp
External 2/bycmd/src/protect/: oxorany.cpp
External 2/bycmd/src/ui/: bar.cpp  bar.hpp  cfg.hpp  launcher.cpp  launcher.hpp  menu.cpp  menu.hpp
External 2/bycmd/src/ui/theme/: theme.hpp
External 2/bycmd/src/ui/widgets/: widgets.cpp  widgets.hpp
(+60 files in other folders)
